crates/kirin-derive-core-old/src/chumsky/snapshots/kirin_derive_core__chumsky__ast__tests__derivate_ast_struct_impl.snap
---
source: crates/kirin-derive-core/src/chumsky/ast.rs
expression: "DeriveAST::builder().build().print(&input)"
---
#[automatically_derived]
pub struct MyStructSyntaxTree < 'tokens , 'src : 'tokens , T : kirin :: parsers :: WithAbstractSyntaxTree < 'tokens , 'src , _AnotherLanguage > , _AnotherLanguage : Dialect < TypeLattice : HasParser < 'tokens , 'src , _AnotherLanguage > > + HasParser < 'tokens , 'src , _AnotherLanguage > > { a : < SSAValue as kirin :: parsers :: WithAbstractSyntaxTree < 'tokens , 'src , _AnotherLanguage >> :: AbstractSyntaxTreeNode , b : < Vec < SSAValue > as kirin :: parsers :: WithAbstractSyntaxTree < 'tokens , 'src , _AnotherLanguage >> :: AbstractSyntaxTreeNode , c : < Option < SSAValue > as kirin :: parsers :: WithAbstractSyntaxTree < 'tokens , 'src , _AnotherLanguage >> :: AbstractSyntaxTreeNode , d : < ResultValue as kirin :: parsers :: WithAbstractSyntaxTree < 'tokens , 'src , _AnotherLanguage >> :: AbstractSyntaxTreeNode , e : < Vec < ResultValue > as kirin :: parsers :: WithAbstractSyntaxTree < 'tokens , 'src , _AnotherLanguage >> :: AbstractSyntaxTreeNode , f : < Option < ResultValue > as kirin :: parsers :: WithAbstractSyntaxTree < 'tokens , 'src , _AnotherLanguage >> :: AbstractSyntaxTreeNode , g : < Block as kirin :: parsers :: WithAbstractSyntaxTree < 'tokens , 'src , _AnotherLanguage >> :: AbstractSyntaxTreeNode , h : < Vec < Block > as kirin :: parsers :: WithAbstractSyntaxTree < 'tokens , 'src , _AnotherLanguage >> :: AbstractSyntaxTreeNode , i : < Option < Block > as kirin :: parsers :: WithAbstractSyntaxTree < 'tokens , 'src , _AnotherLanguage >> :: AbstractSyntaxTreeNode , j : < Region as kirin :: parsers :: WithAbstractSyntaxTree < 'tokens , 'src , _AnotherLanguage >> :: AbstractSyntaxTreeNode , k : < Vec < Region > as kirin :: parsers :: WithAbstractSyntaxTree < 'tokens , 'src , _AnotherLanguage >> :: AbstractSyntaxTreeNode , l : < Option < Region > as kirin :: parsers :: WithAbstractSyntaxTree < 'tokens , 'src , _AnotherLanguage >> :: AbstractSyntaxTreeNode , m : < Successor as kirin :: parsers :: WithAbstractSyntaxTree < 'tokens , 'src , _AnotherLanguage >> :: AbstractSyntaxTreeNode , n : < Vec < Successor > as kirin :: parsers :: WithAbstractSyntaxTree < 'tokens , 'src , _AnotherLanguage >> :: AbstractSyntaxTreeNode , o : < Option < Successor > as kirin :: parsers :: WithAbstractSyntaxTree < 'tokens , 'src , _AnotherLanguage >> :: AbstractSyntaxTreeNode , p : < u32 as kirin :: parsers :: WithAbstractSyntaxTree < 'tokens , 'src , _AnotherLanguage >> :: AbstractSyntaxTreeNode , q : < MyType as kirin :: parsers :: WithAbstractSyntaxTree < 'tokens , 'src , _AnotherLanguage >> :: AbstractSyntaxTreeNode , l : < T as kirin :: parsers :: WithAbstractSyntaxTree < 'tokens , 'src , _AnotherLanguage >> :: AbstractSyntaxTreeNode }
#[automatically_derived]
impl<
        'tokens,
        'src: 'tokens,
        T: kirin::parsers::WithAbstractSyntaxTree<'tokens, 'src, _AnotherLanguage>,
        _AnotherLanguage: Dialect<TypeLattice: HasParser<'tokens, 'src, _AnotherLanguage>>
            + HasParser<'tokens, 'src, _AnotherLanguage>,
    > kirin::parsers::WithAbstractSyntaxTree<'tokens, 'src, _AnotherLanguage> for MyStruct<T>
{
    type AbstractSyntaxTreeNode = MyStructSyntaxTree<'tokens, 'src, T, _AnotherLanguage>;
}
